# ytFetch

./: .gitignore  2ndClaude.md  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  PRIVACY.md  README.md  appStreamlit.py  audio_transcriber.py  auth_utils.py  config.yaml.example  config_loader.py  cookies.txt.example  fetchTscript.py  package-lock.json  packages.txt  requirements.txt  test_live_standalone.py  test_webshare_integration.py  test_yt_dlp_fallbacks.py  transcribeVid.py  transcribe_cli.py
backend/: .dockerignore  .env.example  BULK_API_DOCUMENTATION.md  Dockerfile  README.md  bulk_api_demo.py  fix_issues.sh  playlist_channel_usage_examples.py  pyproject.toml  supabase_ssh_setup.md  test_webhook.py
backend/app/: __init__.py  main.py
backend/sql/: add_missing_bulk_job_columns.sql  add_missing_guest_functions.sql  auth_schema_updates.sql  check_bulk_jobs_constraints.sql  check_bulk_jobs_structure.sql  check_existing_tables.sql  check_triggers.sql  check_video_tasks_structure.sql  complete_schema_setup.sql  create_check_limits_function.sql  create_simple_bulk_jobs_table.sql  create_token_tables.sql  create_usage_functions.sql  diagnose_guest_usage_issue.sql  fix_bulk_jobs_schema.sql  fix_bulk_jobs_schema_cache.sql  fix_check_limits_conflict.sql  fix_check_user_limits_trigger.sql  fix_guest_functions.sql  fix_guest_limits_data.sql  fix_guest_usage_ambiguity.sql  fix_usage_service_compatibility.sql  fix_user_profile_trigger.sql  fix_user_profile_with_email.sql  fixed_complete_schema.sql  guest_access_schema.sql  reset_interrupted_job.sql  supabase_schema.sql  (+3 more)
(+134 files in other folders)
