[tool.poetry]
name = "ytfetch-backend"
version = "0.1.0"
description = "FastAPI backend for YouTube transcription service"
authors = ["ytFetch Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
yt-dlp = "^2025.6.25"
youtube-transcript-api = "^1.1.0"
pydub = "^0.25.1"
groq = "^0.25.0"
openai = "^1.79.0"
tenacity = "^9.1.2"
isodate = "^0.7.2"
aiofiles = "^24.1.0"
python-multipart = "^0.0.9"
pytube = "^15.0.0"
moviepy = "^2.2.1"
supabase = "^2.9.1"
slowapi = "^0.1.9"
stripe = "^10.12.0"
aiohttp = "^3.12.13"
asyncpg = "^0.30.0"
secretstorage = "^3.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.27.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88